# pepper-carrot-companion-workshop

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/skills/extract-world-graph/: SKILL.md
.claude/skills/ingest-from-images/: SKILL.md
.claude/skills/ingest-from-images/scripts/: reingest_with_json.sh
.claude/skills/summarize-wiki/: SKILL.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 63c2bf610f34_initial_schema.py  c04c64861ae8_add_world_entities_and_world_.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  episodes.py  messages.py  sessions.py  world_graph.py
backend/app/clients/: __init__.py  chat.py  embedding.py  storage.py  vision.py
backend/app/core/: __init__.py  prompts.py
backend/app/db/: models.py  seed.py  session.py
backend/app/orchestration/: __init__.py  chat.py
backend/app/retrieval/: __init__.py  service.py
backend/tests/: test_chat.py  test_embedding.py  test_episodes_api.py  test_retrieval.py  test_storage.py  test_world_graph_api.py
data/raw/wiki/: aquah.md  carrot.md  chaosah.md  coriander.md  hereva.md  hippiah.md  magmah.md  pepper.md  shichimi.md
data/raw/wiki-upstream/: characters.md  creatures.md  history.md  magic-system.md  places.md  time-system.md  timeline.md
data/wiki-summaries/entities/: acren.md  ah.md  apiaceae.md  aquah.md  argiope.md  camomile.md  carrot.md  cayenne.md  chaosah.md  coriander.md  cumin.md  dragon-drake.md  dragoncow.md  dragonmoose.md  eyeuk.md  fisher-owl.md  hereva.md  hippiah.md  hornuk.md  komona.md  magmah.md  mango.md  mayor.md  old-sylvan.md  oversized-posh-zombie-canary.md  pepper.md  phanda.md  phoenix.md  qualicity.md  quassia.md  saffron.md  sage.md  savant-ant.md  shichimi.md  spider-admin.md  spiduk.md  spirulina.md  squirrel-s-end.md  temples-of-ah.md  theorem-the-golem.md  (+5 more)
data/wiki-summaries/topics/: chaosah-tradition.md  great-war.md  history-of-hereva.md  magic-system-overview.md  time-system.md
data/world-graph/: entities.yaml  image_manifest.json  relationships.yaml
docs/: data-model.md
docs/decisions/: 0001-local-first-architecture.md  0002-model-provider-abstraction.md  0003-storage-abstraction.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChatPanel.tsx  EpisodePicker.tsx  Flipbook.tsx
frontend/src/components/world-graph/: AvatarNode.tsx  InfoCard.tsx  KindFilterBar.tsx  WorldGraph.tsx  WorldGraphOverlay.tsx  constants.ts  fallback-icons.tsx  focus-layout.ts
frontend/src/styles/: global.css
ingestion/: acquire.py  chroma_writer.py  episode_loader.py  images.py  ingest.py  ingest_wiki.py  ingest_world_graph.py  pyproject.toml  repository.py  wiki_image_scraper.py  wiki_loader.py  wiki_scraper.py  wiki_seed.yaml  world_graph_loader.py
