[project]
name = "peppercarrot-companion-backend"
version = "0.1.0"
description = "Backend for the Pepper&Carrot reading companion"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Vector store
    "chromadb>=0.5",
    # Image processing
    "pillow>=11",
    "blurhash>=1.1",
    # Models
    "httpx>=0.27", # for Ollama HTTP API
    "anthropic>=0.39", # only when ANTHROPIC providers are configured
    "sentence-transformers>=3.3",
    # Storage
    "boto3>=1.35", # only when R2 backend is configured
    "aiofiles>=24.1",
    # Utilities
    "structlog>=24.4",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    # In-memory async DB for the world-graph spoiler-filter test (Post 9).
    # The runtime uses asyncpg against Postgres; SQLite is used only by tests
    # so the spoiler boundary can be exercised against a real SQL engine
    # without requiring a docker-compose Postgres to be running.
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["blurhash.*", "sentence_transformers.*", "aiofiles.*", "yaml", "tqdm"]
ignore_missing_imports = true

# Chroma ships type stubs, but they're stricter than its actual surface (numpy-typed
# embeddings, narrowly-typed metadata mapping). Treat as untyped so callers don't have
# to cast every upsert argument; smoke tests cover the runtime behaviour.
[[tool.mypy.overrides]]
module = ["chromadb.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../ingestion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
