[project]
name = "peppercarrot-companion-ingestion"
version = "0.1.0"
description = "Offline ingestion pipeline for the Pepper&Carrot reading companion (workshop starter)"
requires-python = ">=3.11"
dependencies = [
    # Reuses backend's app modules (config, clients, db models)
    "peppercarrot-companion-backend",
    # Acquisition (data download from peppercarrot.com)
    "httpx>=0.27",
    "pyyaml>=6.0",
    # Ingestion-specific
    "click>=8.1",
    "tqdm>=4.66",
]

[tool.uv]
package = false

[tool.uv.sources]
peppercarrot-companion-backend = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
